--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -76,6 +76,11 @@ button {
   margin-right: 5px;
 }
 
+.refline-path {
+  stroke: #a8b2c7;
+  stroke-width: 1;
+}
+
 .arrow-right {
   margin-right: 5px;
   display: inline-block;
