--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -254,6 +254,9 @@
         [roundDomains]="roundDomains"
         [tooltipDisabled]="tooltipDisabled"
         [showSeriesOnHover]="showSeriesOnHover"
+        [showRefLines]="showRefLines"
+        [showRefLabels]="showRefLabels"
+        [referenceLines]="timeRefLines"
         (select)="select($event)">
       </ngx-charts-line-chart>
       <ngx-charts-polar-chart
