--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -713,6 +713,8 @@
       <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && (!range)">{{dateData | json}}</pre>
       <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && range">{{dateDataWithRange | json}}</pre>
       <pre *ngIf="chart.inputFormat === 'bubble'">{{bubble | json}}</pre>
+      <pre *ngIf="chart.inputFormat === 'comboChart'">{{barChart | json}}</pre>
+      <pre *ngIf="chart.inputFormat === 'comboChart'">{{lineChartSeries | json}}</pre>
       <div>
         <label>
           <input type="checkbox" [checked]="realTimeData" (change)="realTimeData = $event.target.checked">
