updated combo component to change chart width for y axis and legend position

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -406,10 +406,12 @@
             [xAxis]="showXAxis"
             [yAxis]="showYAxis"
             [syncAxis]="syncAxis"
-            [legend]="showComboLegend"
+            [legend]="showLegend"
+            [legendTitle]="legendTitle"
+            [showGridLines]="showGridLines"
             [showXAxisLabel]="showXAxisLabel"
             [showYAxisLabel]="showYAxisLabel"
-            [showRightYAxisLabel]="showRightYAxisLabel"
+            [showRightYAxisLabel]="showYAxisLabel"
             [xAxisLabel]="xAxisLabel"
             [yAxisLabel]="yAxisLabel"
             [yAxisLabelRight]="yAxisLabelRight"
