--- a/app.css
+++ b/app.css
@@ -13,6 +13,7 @@
   .ngx-charts .card.active,
   .ngx-charts .card:hover {
     opacity: 0.8;
+    -webkit-transition: opacity 100ms ease-in-out;
     transition: opacity 100ms ease-in-out; }
   .ngx-charts .bar:focus,
   .ngx-charts .cell:focus,
@@ -26,6 +27,7 @@
   .ngx-charts .polar-series-path.inactive,
   .ngx-charts .polar-series-area.inactive,
   .ngx-charts .area-series.inactive {
+    -webkit-transition: opacity 100ms ease-in-out;
     transition: opacity 100ms ease-in-out;
     opacity: .2; }
   .ngx-charts .line-highlight {
