added output for bandwidth, removed the ability to input bar padding on comb-chart only, was causing some issues with line and bar align, need to revisit

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -415,6 +415,7 @@
             [xAxisLabel]="xAxisLabel"
             [yAxisLabel]="yAxisLabel"
             [yAxisLabelRight]="yAxisLabelRight"
+            [barPadding]="barPadding"
             (select)="onSelect($event)">
       </combo-chart-component>
       <ngx-charts-heat-map
