added tooltipDisabled boolean to combo cart demo

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -398,6 +398,7 @@
             [colorSchemeLine]="lineChartScheme"
             [results]="barChart"
             [lineChart]="lineChartSeries"
+            [tooltipDisabled]="tooltipDisabled"
             [yAxisTickFormatting]="yLeftTickFormat"
             [yLeftAxisScaleFactor]="yLeftAxisScale"
             [yRightAxisScaleFactor]="yRightAxisScale"
