Most of the way there.

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -12,6 +12,9 @@
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
+        [yAxisScale]="yAxisScale"
+        [yDomainMin]="yDomainMin"
+        [yDomainMax]="yDomainMax"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [showXAxisLabel]="showXAxisLabel"
@@ -247,6 +250,8 @@
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
         [yAxisScale]="yAxisScale"
+        [yDomainMin]="yDomainMin"
+        [yDomainMax]="yDomainMax"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [xAxisLabel]="xAxisLabel"
@@ -992,6 +997,17 @@
             {{scaleType}}
           </option>
         </select>
+      </div>
+      <div *ngIf="chart.options.includes('yDomainMin')">
+        <label>Domain Limits</label>
+        <input type="checkbox" [checked]="domainLimits" (change)="toggleDomainLimits($event.target.checked)">
+        <label>Y axis min:</label><br />
+        <input type="number" [(ngModel)]="_yDomainMin"><br />
+      </div>
+
+      <div *ngIf="chart.options.includes('yDomainMax')">
+        <label>Y axis max:</label><br />
+        <input type="number" [(ngModel)]="_yDomainMax"><br />
       </div>
       <div *ngIf="chart.options.includes('min')">
         <label>Min value:</label><br />
