--- a/src/common/legend/legend.component.scss
+++ b/src/common/legend/legend.component.scss
@@ -69,7 +69,7 @@
     vertical-align: top;
     line-height: 15px;
     font-size: 12px;
-    width: 100%;
+    width: calc(100% - 15px);
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
