added some fixed svg

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -549,7 +549,8 @@
         (select)="select($event)">
       </ngx-charts-linear-gauge>
       <ngx-charts-radial-gauge
-      *ngIf="chartType === 'radial-gauge'">
+      *ngIf="chartType === 'radial-gauge'"
+        [view]="view">
       </ngx-charts-radial-gauge>
       <div *ngIf="chartType === 'plot-demo'">
         <ngx-input
