edited scale of components

--- a/src/gauge/radial-gauge/radial-gauge.component.html
+++ b/src/gauge/radial-gauge/radial-gauge.component.html
@@ -1,7 +1,7 @@
 <ngx-charts-chart
   [view]="[width, height]">
 
-  <svg:g [attr.transform]="translate">
+  <svg:g [attr.transform]="getTranslate()">
 
       <!-- arcs -->
 
