Add inputs to bubble chart; enforce max and min values for line and area charts

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -324,6 +324,10 @@
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [autoScale]="autoScale"
+        [xScaleMin]="xScaleMin"
+        [xScaleMax]="xScaleMax"
+        [yScaleMin]="yScaleMin"
+        [yScaleMax]="yScaleMax"
         [scheme]="colorScheme"
         [schemeType]="schemeType"
         [roundDomains]="roundDomains"
