--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1118,21 +1118,32 @@
       </div>
 
       <div *ngIf="chart.options.includes('xScaleMin')">
-        <label></label><br />
-        <ngx-date-time
-          [inputType]="'datetime'"
-          label="Minimum X-Scale value"
-          [(ngModel)]="xScaleMin">
-        </ngx-date-time>        
+        <div *ngIf="chartType !== 'bubble-chart'">
+          <label></label><br />
+          <ngx-date-time
+            [inputType]="'datetime'"
+            label="Minimum X-Scale value"
+            [(ngModel)]="xScaleMin">
+          </ngx-date-time>        
+        </div>
+        <div *ngIf="chartType === 'bubble-chart'">
+          <label>Minimum X-Scale value</label><br />
+          <input type="number" [(ngModel)]="xScaleMin"><br />    
+        </div>
       </div>
+
       <div *ngIf="chart.options.includes('xScaleMax')">
-        <ngx-date-time *ngIf="!chartType.startsWith('bar-horizontal')"
-          [inputType]="'datetime'"
-          label="Maximum X-Scale value"
-          [(ngModel)]="xScaleMax">
-        </ngx-date-time>    
-        <input *ngIf="chartType.startsWith('bar-horizontal')"
-          type="number" [(ngModel)]="xScaleMax"><br />    
+        <div *ngIf="!chartType.startsWith('bar-horizontal') && chartType !== 'bubble-chart'">
+          <ngx-date-time *ngIf="!chartType.startsWith('bar-horizontal')"
+            [inputType]="'datetime'"
+            label="Maximum X-Scale value"
+            [(ngModel)]="xScaleMax">
+          </ngx-date-time>    
+        </div>
+        <div *ngIf="chartType.startsWith('bar-horizontal') || chartType === 'bubble-chart'">
+          <label>Maximum X-Scale value</label><br />
+          <input type="number" [(ngModel)]="xScaleMax"><br />    
+        </div>
       </div>
 
       <div *ngIf="chart.options.includes('yScaleMin')">
