added settings for arc color and pointer color

--- a/src/gauge/radial-gauge/radial-gauge.component.html
+++ b/src/gauge/radial-gauge/radial-gauge.component.html
@@ -12,7 +12,7 @@
             [endAngle]="arc.endAngle"
             [innerRadius]="arc.innerRadius"
             [outerRadius]="arc.outerRadius"
-            [fill]="'#aaca2a'"
+            [fill]="arc.color"
           >
         </svg:g>
       </svg:g>
@@ -50,7 +50,8 @@
       <svg:g class="pointer">
           <path 
             [attr.transform]="movePointer()"
-            [attr.d]="getPointer()" >
+            [attr.d]="getPointer()"
+            [attr.fill]="pointerColor" >
           </path>
       </g>
   </svg:g>
