--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -555,6 +555,13 @@
         [minValue]="gaugeMin"
         [maxValue]="gaugeMax"
         [value]="gaugeValue"
+        [unit]="radialGaugeUnit"
+        [showValue]="radialGaugeShowValue"
+        [showUnit]="radialGaugeShowUnit"
+        [minAngle]="radialGaugeMinAngle"
+        [maxAngle]="radialGaugeMaxAngle"
+        [majorTicks]="gaugeLargeSegments"
+        [majorTicks]="gaugeSmallSegments"
         >
       </ngx-charts-radial-gauge>
       <div *ngIf="chartType === 'plot-demo'">
@@ -1041,6 +1048,26 @@
       <div *ngIf="chart.options.includes('units')">
         <label>Units:</label><br />
         <input type="text" [(ngModel)]="gaugeUnits"><br />
+      </div>
+      <div *ngIf="chart.options.includes('unit')">
+          <label>Units: </label><br />
+          <input type="text" [(ngModel)]="radialGaugeUnit"><br />
+      </div>
+      <div *ngIf="chart.options.includes('showValue')">
+          <label>Units: </label><br />
+          <input type="checkbox" [(ngModel)]="radialGaugeShowValue"><br />
+      </div>
+      <div *ngIf="chart.options.includes('showUnit')">
+          <label>Units: </label><br />
+          <input type="checkbox" [(ngModel)]="radialGaugeShowUnit"><br />
+      </div>
+      <div *ngIf="chart.options.includes('minAngle')">
+          <label>Minimal angle: </label><br />
+          <input type="text" [(ngModel)]="radialGaugeMinAngle"><br />
+      </div>
+      <div *ngIf="chart.options.includes('maxAngle')">
+          <label>Maximal angle: </label><br />
+          <input type="text" [(ngModel)]="radialGaugeMaxAngle"><br />
       </div>
       <div *ngIf="chart.options.includes('margin')">
         <label>
