added a fix for calculating angles for arcs

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1040,14 +1040,6 @@
         <label>Number of large segments:</label><br />
         <input type="number" [(ngModel)]="gaugeLargeSegments"><br />
       </div>
-      <div *ngIf="chart.options.includes('smallSegments')">
-        <label>Number of small segments:</label><br />
-        <input type="number" [(ngModel)]="gaugeSmallSegments"><br />
-      </div>
-      <div *ngIf="chart.options.includes('units')">
-        <label>Units:</label><br />
-        <input type="text" [(ngModel)]="gaugeUnits"><br />
-      </div>
       <div *ngIf="chart.options.includes('displayValue')">
           <label>Display value: </label><br />
           <input type="text" [(ngModel)]="radialGaugeDisplayValue"><br />
@@ -1058,11 +1050,11 @@
       </div>
       <div *ngIf="chart.options.includes('minAngle')">
           <label>Minimal angle: </label><br />
-          <input type="text" [(ngModel)]="radialGaugeMinAngle"><br />
+          <input type="number" [(ngModel)]="radialGaugeMinAngle"><br />
       </div>
       <div *ngIf="chart.options.includes('maxAngle')">
           <label>Maximal angle: </label><br />
-          <input type="text" [(ngModel)]="radialGaugeMaxAngle"><br />
+          <input type="number" [(ngModel)]="radialGaugeMaxAngle"><br />
       </div>
       <div *ngIf="chart.options.includes('margin')">
         <label>
